--- a/.env
+++ b/.env
@@ -27,4 +27,5 @@ MAIL_ENCRYPTION=null
 
 GOOGLE_DISTANCE_MATRIX_API=AIzaSyD-9jnTkbI1w2MOdWfwfd9riEGOHiorIEc
 GOOGLE_VISUALIZING_DATA_API=AIzaSyD_9io6iFi5rLAp1sGU73AYruIUbaW4-qc
-
+GOOGLE_DIRECTION_API=AIzaSyAWlgEAm5EDVts-CS0pOhOw7U1iBbjcadg
+GOOGLE_ELEVATION_API=AIzaSyCb69JqE8Dneh4Hb8Gm7ZaccUMNvtcoLzc
