--- a/.env
+++ b/.env
@@ -29,3 +29,7 @@ GOOGLE_DISTANCE_MATRIX_API=AIzaSyD-9jnTkbI1w2MOdWfwfd9riEGOHiorIEc
 GOOGLE_VISUALIZING_DATA_API=AIzaSyD_9io6iFi5rLAp1sGU73AYruIUbaW4-qc
 GOOGLE_DIRECTION_API=AIzaSyAWlgEAm5EDVts-CS0pOhOw7U1iBbjcadg
 GOOGLE_ELEVATION_API=AIzaSyCb69JqE8Dneh4Hb8Gm7ZaccUMNvtcoLzc
+
+GOOGLE_ELEVATION_API_NEW=AIzaSyDWZJhH7UhfJu3cs5bcRHwq3cVFR8pyGOk
+GOOGLE_DISTANCE_MATRIX_API=AIzaSyC4fAyRCp1XMnlL5vJvA0kOjTGoZLnScY0
+GOOGLE_PLOT_ROUTE_API=AIzaSyDUoCkiBINurE1p3i2pUBFsSFpjHWiAudo
