added way points

--- a/.env
+++ b/.env
@@ -33,3 +33,4 @@ GOOGLE_ELEVATION_API=AIzaSyCb69JqE8Dneh4Hb8Gm7ZaccUMNvtcoLzc
 GOOGLE_ELEVATION_API_NEW=AIzaSyDWZJhH7UhfJu3cs5bcRHwq3cVFR8pyGOk
 GOOGLE_DISTANCE_MATRIX_API=AIzaSyC4fAyRCp1XMnlL5vJvA0kOjTGoZLnScY0
 GOOGLE_PLOT_ROUTE_API=AIzaSyDUoCkiBINurE1p3i2pUBFsSFpjHWiAudo
+GOOGLE_MAP_API=AIzaSyBhGPQjX5WJXHMcbQ9FybEDNlnGS8fyvh0
